[package]
name = "uring_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.49"
nohash = "0.2.0"
pin-project-lite = "0.2.13"



[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.6.2"
libc = "0.2.149"
